--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Workouts</string>
     <string name="home">Home</string>
     <string name="settings">Settings</string>
+    <string name="movie_settings">Movie settings</string>
+    <string name="playback_settings">Playback settings</string>
 </resources>
