--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="settings">Settings</string>
     <string name="movie_settings">Movie settings</string>
     <string name="playback_settings">Playback settings</string>
+    <string name="movie_name_hint">Movie name</string>
+    <string name="select_movie">Select a movie</string>
 </resources>
